<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kutuska.android.alcovol.UserCreation"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="#0b74de">

    <ScrollView
        android:id="@+id/questions"
        android:background="#58a0e7"
        android:layout_marginTop="35dp"
        android:layout_width="320dp"
        android:layout_centerHorizontal="true"
        android:layout_height="400dp">
        
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                    <TextView
                        android:padding="10dp"
                        android:text="@string/question1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/username"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                
                    <TextView
                        android:text="@string/question2"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioGroup
                        android:id="@+id/radioGroupGender"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="false"
                        android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/RadioGenderMale"
                                android:text="@string/gender_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <RadioButton
                                android:id="@+id/RadioGenderFemale"
                                android:text="@string/gender_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                    </RadioGroup>
                    <TextView
                        android:padding="10dp"
                        android:text="@string/question3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                        
                        <SeekBar
                            android:id="@+id/seekBarWeight"
                            android:max="150"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="230dp"
                            android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/seekBarWeightProgress"
                        android:text="@string/seekbar_weight_text"
                        android:paddingBottom="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </LinearLayout>

        </ScrollView>
    <Button
        android:id="@+id/saveProfileButton"
        android:text="@string/nextButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
