<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#0b74de"
    tools:context="com.kutuska.android.alcovol.Results">

    <ScrollView
        android:background="#58a0e7"
        android:layout_marginTop="35dp"
        android:layout_width="320dp"
        android:layout_centerHorizontal="true"
        android:layout_height="300dp"
        android:id="@+id/results">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/result0"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/resultbac"
                android:textSize="40sp"
                android:padding="50sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/result1"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/resultdrunk"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/FinishButton"
        android:text="@string/hadenoughButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/results"
        android:layout_alignEnd="@+id/results" />

    <Button
        android:id="@+id/newAlcoholButton"
        android:text="@string/newdrinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/results"
        android:layout_alignStart="@+id/results" />
</RelativeLayout>
